:bug: z-index header footer

--- a/css/main.css
+++ b/css/main.css
@@ -1734,7 +1734,7 @@ button {
   left: 0;
   background-color: #282c34;
   opacity: 0;
-  z-index: 1;
+  z-index: 3;
   -webkit-transition: -webkit-transform 0.3s ease-in-out;
           transition: transform 0.3s ease-in-out;
   cursor: pointer; }
@@ -1747,7 +1747,7 @@ button {
   background-color: #393d47;
   color: white;
   position: relative;
-  z-index: 2; }
+  z-index: 6; }
   #footer:before {
     content: '';
     display: block;
